--- a/src/argmin_core/nooperator.rs.html
+++ b/src/argmin_core/nooperator.rs.html
@@ -126,7 +126,7 @@
 <span id="126">126</span>
 <span id="127">127</span>
 </pre><div class="example-wrap"><pre class="rust ">
-<span class="comment">// Copyright 2018 Stefan Kroboth</span>
+<span class="comment">// Copyright 2018-2020 argmin developers</span>
 <span class="comment">//</span>
 <span class="comment">// Licensed under the Apache License, Version 2.0 &lt;LICENSE-APACHE or</span>
 <span class="comment">// http://apache.org/licenses/LICENSE-2.0&gt; or the MIT license &lt;LICENSE-MIT or</span>
